# mcp-game-deck

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json
.claude/: settings.json  settings.local.json
.claude/agents/: README.md  auto-reviewer.md  (+15 more)
Agents~/: qa-lead.md  systems-designer.md  unity-addressables-specialist.md
App~/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
App~/src-tauri/: Cargo.toml  tauri.conf.json
App~/src-tauri/capabilities/: default.json
App~/src-tauri/src/: events.rs  lib.rs  main.rs  types.rs
App~/src-tauri/src/claude_supervisor/: asset_install.rs  install_check.rs  lifecycle.rs  mod.rs  paths.rs  runtime_setup.rs  sdk_entry.js  sdk_install.rs  spawn.rs
App~/src-tauri/src/commands/: connection.rs  conversation.rs  dev.rs  env.rs  install.rs  mod.rs  plans.rs  rules.rs  sessions.rs  settings.rs
App~/src-tauri/src/node_supervisor/: jsonrpc.rs  mod.rs  protocol.rs  spawn.rs
App~/src-tauri/src/unity_client/: connection.rs  mod.rs  protocol.rs
Editor/: GameDeck.Editor.asmdef
KnowledgeBase~/: 02-scriptableobjects-data-driven.md
Server~/: .env.template  agent-sdk-stub.js  package-lock.json  package.json
knowledge-base/: 01-unity-project-architecture.md  03-unity-design-patterns.md  05-architecture-by-genre.md  07-core-gameplay-systems.md  08-unity-ui-ux.md  09-dependency-injection-testing.md  10-ai-assisted-unity-workflow.md  11-asset-pipeline-addressables.md  13-audio-vfx-systems.md  14-save-system-meta-progression.md  15-publishing-live-ops.md  16-unity-project-case-studies.md
(+398 files in other folders)
