[package]
name = "mcp-game-deck-app"
version = "0.1.0"
description = "MCP Game Deck — external app"
authors = ["RamonBedin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "io-util", "time", "rt", "net"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(any(target_os = \"windows\", target_os = \"macos\", target_os = \"linux\"))".dependencies]
tauri-plugin-cli = "2.0.0"
